--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hackmd/markdown-it",
-  "version": "12.0.6-pre1",
+  "version": "12.0.7",
   "description": "Markdown-it - modern pluggable markdown parser.",
   "keywords": [
     "markdown",
