--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hackmd/markdown-it",
-  "version": "12.0.23",
+  "version": "12.0.25",
   "description": "Markdown-it - modern pluggable markdown parser.",
   "keywords": [
     "markdown",
@@ -28,7 +28,7 @@
     "benchmark-deps": "npm install --prefix benchmark/extra/ -g marked@0.3.6 commonmark@0.26.0 markdown-it/markdown-it.git#2.2.1",
     "specsplit": "support/specsplit.js good -o test/fixtures/commonmark/good.txt && support/specsplit.js bad -o test/fixtures/commonmark/bad.txt && support/specsplit.js",
     "todo": "grep 'TODO' -n -r ./lib 2>/dev/null",
-    "prepublishOnly": ""
+    "prepublishOnly": "npm run browserify"
   },
   "files": [
     "index.js",
